// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File invalid renders correctly 1`] = `
<li
  class="HvFileUploaderFile-root"
>
  <div
    class="HvFileUploaderFile-icon HvIconBase-root HvIconBase-s"
    name="Fail"
  >
    <svg
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="color0"
        d="M7.5 4.001h1v6h-1zm0 8h1v-1h-1zM16 8a8 8 0 10-8 8 8 8 0 008-8zm-1 0a7 7 0 11-7-7 7 7 0 017 7z"
        fill="#C62828"
      />
    </svg>
  </div>
  <p
    class="HvFileUploaderFile-nameText HvTypography-root HvTypography-highlightText HvTypography-noWrap"
  >
    somefile.png
  </p>
  <span
    class="HvFileUploaderFile-progressTextContainer"
  >
     | 
    <p
      class="HvFileUploaderFile-fail HvTypography-root HvTypography-normalText"
    >
      File type not allowed for upload
    </p>
  </span>
  <button
    aria-label="removeFileButtonLabel"
    category="ghost"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium HvFileUploaderFile-removeButton css-5xhalq-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <div
      class="HvIconBase-root HvIconBase-xs"
      name="Close"
    >
      <svg
        focusable="false"
        height="12"
        viewBox="0 0 16 16"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="color0"
          d="M8.7 8l5.3 5.3-.7.7L8 8.7 2.7 14l-.7-.7L7.3 8 2 2.7l.7-.7L8 7.3 13.3 2l.7.7z"
          fill="#414141"
        />
      </svg>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</li>
`;

exports[`File valid renders correctly 1`] = `
<li
  class="HvFileUploaderFile-root"
>
  <div
    class="HvFileUploaderFile-icon HvIconBase-root HvIconBase-s"
    name="Success"
  >
    <svg
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="color0"
        d="M6.387 12L4 9.613l.707-.707 1.613 1.613 4.65-5.58.768.641zM8 15a6.953 6.953 0 01-4.943-2.057A7.023 7.023 0 118 15m8-7a8 8 0 10-8 8 8 8 0 008-8z"
        fill="#59941B"
      />
    </svg>
  </div>
  <p
    class="HvFileUploaderFile-nameText HvTypography-root HvTypography-highlightText HvTypography-noWrap"
  >
    somefile.png
  </p>
  <span
    class="HvFileUploaderFile-progressTextContainer"
  >
     | 
    <p
      class="HvTypography-root HvTypography-normalText"
    >
      875.00B
    </p>
  </span>
  <button
    aria-label="removeFileButtonLabel"
    category="ghost"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium HvFileUploaderFile-removeButton css-5xhalq-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <div
      class="HvIconBase-root HvIconBase-xs"
      name="Close"
    >
      <svg
        focusable="false"
        height="12"
        viewBox="0 0 16 16"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="color0"
          d="M8.7 8l5.3 5.3-.7.7L8 8.7 2.7 14l-.7-.7L7.3 8 2 2.7l.7-.7L8 7.3 13.3 2l.7.7z"
          fill="#414141"
        />
      </svg>
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</li>
`;
